<resources>
    <string name="app_name">News</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="menu_home_button_text">Home</string>
    <string name="menu_favorites_button_text">Favorites</string>
    <string name="title_activity_news_by_category">NewsByCategoryActivity</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>

    <string name="post_comment_text">Post Comment</string>
    <string name="add_to_favorites_text">Add to Favorites</string>
    <string name="remove_from_favorites_text">Remove from Favorites</string>

    <string name="comment_name_hint">Your name</string>
    <string name="comment_last_name_hint">Your last name</string>
    <string name="comment_text_hint">Your comment</string>
    <string name="comment_ok_text">Post comment</string>
    <string name="comment_cancel_text">Cancel</string>
    <string name="post_comment_error">Failed to post comment!</string>
    <string name="comments">Comments</string>
    <string name="title_activity_favorite_news">FavoriteNewsActivity</string>
    <string name="add_to_favorites_result_message">This news added to favorites successfully!</string>
    <string name="remove_from_favorites_result_message">This news removed from favorites successfully!</string>
    <string name="required_value_error">Required!</string>
</resources>
